# dev_tools

./: .gitignore  Cargo.toml  Readme.md  Rocket.toml  apikeys.txt.sample
src/: errors.rs  main.rs  secrets.rs
src/notes/: mod.rs  schema.rs
src/routes/: misc.rs  mod.rs  notes.rs  users.rs
src/users/: auth.rs  mod.rs  schema.rs  secret.key.sample
static/: dev-tools.js  index.html
templates/: notes.hbs
